fix to supporting documents wrapping.

--- a/assets/sass/local.scss
+++ b/assets/sass/local.scss
@@ -246,3 +246,7 @@ pre {
   width: 4em;
   vertical-align:bottom;
 }
+
+.overflow-wrap-anywhere {
+  overflow-wrap: anywhere;
+}
